# goit-pythonweb-hw-012

./: .coverage  .coveragerc  .env  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  test_int.db
docs/: conf.py
docs/api/: src.api.rst  src.api.users.rst  src.api.utils.rst  src.auth.auth.rst  src.auth.roles.rst  src.cache.rst  src.cache.token_cache.rst  src.cloudinary_service.rst  src.conf.config.rst  src.conf.rst  src.database.models.rst  src.emailer.rst  src.ratelimit.rst  src.repository.rst  src.repository.users.rst  src.rst  src.services.contacts.rst  src.services.rst  src.services.users.rst
migrations/: env.py
migrations/versions/: 04e7cc592db3_init_users_add_confirmed_status_for_.py  5c675bb9f48e_init_users_add_avatar_public_id_columns.py  6e05d20356de_init_users_add_refresh_token.py  82681d5429bf_add_user_role.py  b898df1b55e9_init_users_contacts.py  c2403013181b_init_users_and_contacts_add_.py  e368ef0868fd_init_users_and_contacts_add_relationship.py
src/: cloudinary_service.py  emailer.py  ratelimit.py  schemas.py
src/api/: contacts.py  users.py  utils.py
src/auth/: auth.py  deps.py  roles.py
src/cache/: contacts_cache.py  redis_client.py  token_cache.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: contacts.py  users.py
tests/: conftest.py
tests/integration/: contacts_integration_test.py  users_integration_test.py
tests/unit/: auth_test.py  cloudinary_service_test.py  contacts_service_test.py  emailer_test.py  users_service_test.py
(+2 files in other folders)
